# rust-ftp-notify-sync

./: Cargo.toml  LICENCE.txt  readme.md
src/: main.rs
