[package]
name = "sync_ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suppaftp = {version="5.3.1", features=["native-tls"]}
shellexpand = "3.1.0"
dotenv = "0.15.0"
notify-debouncer-full = {version="0.3.1", default_features=false}
tokio = {version="1.36.0", features=["full"]}
