[package]
name = "sync_ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suppaftp = {version="5.4.0", features=["native-tls", "async", "async-native-tls"]}
shellexpand = "3.1.0"
dotenv = "0.15.0"
notify-debouncer-full = {version="0.3.1", default_features=false}
tokio = {version="1.36.0", features=["full"]}
tokio-util={version="^0.7.10", features=["compat"]}
env_logger="0.11.3"
log = { version = "0.4.21", features = ["std"] }